Pass in memory arguments to the wls-maven-plugin
git-svn-id: https://svn.java.net/svn/mojarra~svn/branches/MOJARRA_2_2X_ROLLING@13162 761efcf2-d34d-6b61-9145-99dcacc3edf1