@@ -645,6 +645,11 @@
                         <artifactId>wls-maven-plugin</artifactId>
                         <version>12.1.3.0</version>
                         <inherited>true</inherited>
+                        <configuration>
+                            <systemProperties>
+                                <USER_MEM_ARGS>${weblogic.cargo.memargs}</USER_MEM_ARGS>
+                            </systemProperties>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>deploy</id>
@@ -664,6 +669,7 @@
                 <weblogic.cargo.password>adminadmin1</weblogic.cargo.password>
                 <weblogic.cargo.wldomain>${weblogic.cargo.home}/user_projects/domains/mydomain</weblogic.cargo.wldomain>
                 <weblogic.cargo.wlserver>${weblogic.cargo.home}/wlserver</weblogic.cargo.wlserver>
+                <weblogic.cargo.memargs>-Xms512m -Xmx786m -XX:MaxPermSize=786m</weblogic.cargo.memargs>
                 <domainHome>${weblogic.cargo.wldomain}</domainHome>
                 <middlewareHome>${weblogic.cargo.home}</middlewareHome>
                 <weblogicHome>${weblogic.cargo.wlserver}</weblogicHome>
